Fix login icons clipped by card overlay

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -853,6 +853,8 @@ button:active{ transform: scale(.97); }
 
 /* contenitore delle icone */
 .login-card img {
+  width: 100%;
+  height: 100%;
   display: inline-block;
   width: 36px;
   height: 36px;
